More work around world map, places and comments

--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
   <div id="mask-top"></div>
   <div id="aside-right"></div>
   <div id="mask-right"></div>
-  <div id="aside-right-bis"></div>
-  <div id="mask-right-bis"></div>
+  <div id="aside-feedback">
+    <div class="feedback">
+    <div class="btn-feedback">
+      <span class="fa fa-comment"></span><span>Comments</span>
+    </div>
+    <div id="disqus_thread" class="disqus-thread"></div>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div>
+  </div>
+  <div id="mask-feedback"></div>
 
   <script src="resources/app.js"></script>
 </body>
