Improve mobile experience

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <meta name="msapplication-tap-highlight" content="no"/>
 
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" media="screen" href="resources/app.css" />
+  <link rel="stylesheet" media="screen" href="../resources/app.css" />
 
   <script type="text/javascript" src="resources/mobile.js"></script>
 </head>
 <body>
-  <div id="content"></div>
+  <div id="content" class="fullscreen"></div>
 
   <div id="aside-top"></div>
   <div id="mask-top"></div>
@@ -34,6 +34,6 @@
   </div>
   <div id="mask-feedback"></div>
 
-  <script src="resources/app.js"></script>
+  <script src="../resources/app.js"></script>
 </body>
 </html>
