--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="resources/mobile.js"></script>
 </head>
 <body>
-  <div id="content" class="fullscreen"></div>
+  <div id="content" class="iscroll-wrapper fullscreen"><div class="content"></div></div>
 
   <div id="aside-top"></div>
   <div id="mask-top"></div>
@@ -25,8 +25,13 @@
   <div id="mask-right"></div>
 
   <div id="aside-feedback">
-    <div class="btn-feedback">
-      <span class="fa fa-comment"></span><span><span class="text-underline">C</span>omments</span>
+    <div class="buttons">
+      <div class="btn-back">
+        <span class="fa fa-times-circle"></span><span><span class="text-underline">B</span>ack</span>
+      </div>
+      <div class="btn-feedback">
+        <span class="fa fa-comment"></span><span><span class="text-underline">C</span>omments</span>
+      </div>
     </div>
     <div id="disqus_thread" class="disqus-thread"></div>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
