Change file paths

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="msapplication-tap-highlight" content="no"/>
 
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" media="screen" href="../resources/app.css" />
+  <link rel="stylesheet" media="screen" href="resources/app.css" />
 
   <script type="text/javascript" src="resources/mobile.js"></script>
 </head>
@@ -39,6 +39,6 @@
   </div>
   <div id="mask-feedback"></div>
 
-  <script src="../resources/app.js"></script>
+  <script src="resources/app.js"></script>
 </body>
 </html>
