--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
   <meta name="msapplication-tap-highlight" content="no"/>
 
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" media="screen" href="resources/app.css" />
 
-  <script type="text/javascript" src="resources/mobile.js"></script>
+  <!-- build:css resources/app.min.css -->
+  <link rel="stylesheet" media="screen" href="resources/app.css" />
+  <!-- endbuild -->
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-51258218-2', 'pauldijou.fr');
+    ga('send', 'pageview');
+
+  </script>
+
+  <!-- build:js resources/head.min.js -->
+  <script src="resources/head.js"></script>
+  <!-- endbuild -->
 </head>
 <body>
   <div id="content" class="iscroll-wrapper fullscreen"><div class="content"></div></div>
@@ -39,6 +55,8 @@
   </div>
   <div id="mask-feedback"></div>
 
+  <!-- build:js resources/app.min.js -->
   <script src="resources/app.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
