--- a/index.html
+++ b/index.html
@@ -34,16 +34,22 @@
 <body>
   <div id="content" class="iscroll-wrapper fullscreen content"><div class="loader color-jade"><div class="spinner"></div></div></div>
 
-  <div id="aside-top"></div>
+  <div id="aside-bottom">
+    <div class="footer">
+      <span class="footer-icon fa fa-arrow-down"></span>
+    </div>
+  </div>
+
   <div id="mask-top"></div>
+  <div id="aside-top"></div>
 
-  <div id="aside-right"></div>
   <div id="mask-right"></div>
+  <div id="aside-right"></div>
 
+  <div id="mask-feedback"></div>
   <div id="aside-feedback">
     <div id="disqus_thread" class="disqus-thread"></div>
   </div>
-  <div id="mask-feedback"></div>
 
   <div id="aside-feedback-buttons">
     <div class="buttons">
