--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 
   <div id="aside-bottom">
     <div class="footer">
-      <span class="footer-icon fa fa-arrow-down"></span>
+      <div class="footer-icon">
+        <span class="fa fa-arrow-down"></span>
+        <span class="spinner"></span>
+      </div>
     </div>
   </div>
 
