Deploy new version

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="resources/app.min-68a3ca85.css"/>
+  <link rel="stylesheet" href="resources/app.min-5c79486a.css"/>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,18 +25,32 @@
 
   </script>
 
-  <script src="resources/head.min-75430897.js"></script>
+  <script src="resources/head.min-17cba76a.js"></script>
 </head>
 <body>
-  <div id="content" class="iscroll-wrapper fullscreen"><div class="content"></div></div>
+  <div id="content" class="iscroll-wrapper fullscreen content"><div class="loader color-jade"><div class="spinner"></div></div></div>
 
-  <div id="aside-top"></div>
+  <div id="aside-bottom">
+    <div class="footer">
+      <div class="footer-icon">
+        <span class="fa fa-arrow-down"></span>
+        <span class="spinner"></span>
+      </div>
+    </div>
+  </div>
+
   <div id="mask-top"></div>
+  <div id="aside-top"></div>
 
-  <div id="aside-right"></div>
   <div id="mask-right"></div>
+  <div id="aside-right"></div>
 
+  <div id="mask-feedback"></div>
   <div id="aside-feedback">
+    <div id="disqus_thread" class="disqus-thread"></div>
+  </div>
+
+  <div id="aside-feedback-buttons">
     <div class="buttons">
       <div class="btn-back">
         <span class="fa fa-times-circle"></span><span><span class="text-underline">B</span>ack</span>
@@ -45,12 +59,8 @@
         <span class="fa fa-comment"></span><span><span class="text-underline">C</span>omments</span>
       </div>
     </div>
-    <div id="disqus_thread" class="disqus-thread"></div>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
   </div>
-  <div id="mask-feedback"></div>
 
-  <script src="resources/app.min-bee09f48.js"></script>
+  <script src="resources/app.min-63c24236.js"></script>
 </body>
 </html>
