--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
     </div>
   </div>
 
+  <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+    <div class="slides"></div>
+    <h3 class="title"></h3>
+    <a class="prev">‹</a>
+    <a class="next">›</a>
+    <a class="close">×</a>
+    <a class="play-pause"></a>
+    <ol class="indicator"></ol>
+  </div>
+
   <!-- build:js resources/app.min.js -->
   <script src="resources/app.js"></script>
   <!-- endbuild -->
