Add tooltip. Remove iscroll legacy

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- endbuild -->
 </head>
 <body>
-  <div id="content" class="iscroll-wrapper fullscreen content"><div class="loader color-jade"><div class="spinner"></div></div></div>
+  <div id="content" class="fullscreen content"><div class="loader color-main"><div class="spinner"></div></div></div>
 
   <div id="aside-bottom">
     <div class="footer">
