--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="resources/app.min-37d1d7da.css"/>
+  <link rel="stylesheet" href="resources/app.min-a0b5bb73.css"/>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -28,7 +28,7 @@
   <script src="resources/head.min-17cba76a.js"></script>
 </head>
 <body>
-  <div id="content" class="iscroll-wrapper fullscreen content"><div class="loader color-jade"><div class="spinner"></div></div></div>
+  <div id="content" class="fullscreen content"><div class="loader color-main"><div class="spinner"></div></div></div>
 
   <div id="aside-bottom">
     <div class="footer">
@@ -61,6 +61,16 @@
     </div>
   </div>
 
-  <script src="resources/app.min-6b8a44b8.js"></script>
+  <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+    <div class="slides"></div>
+    <h3 class="title"></h3>
+    <a class="prev">‹</a>
+    <a class="next">›</a>
+    <a class="close">×</a>
+    <a class="play-pause"></a>
+    <ol class="indicator"></ol>
+  </div>
+
+  <script src="resources/app.min-5c368ac8.js"></script>
 </body>
 </html>
