--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-51258218-2', 'pauldijou.fr');
-    ga('send', 'pageview');
+    ga('create', 'UA-51258218-2', 'auto');
+    ga('send', 'pageview', {'sessionControl': 'start'});
 
   </script>
 
