--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-51258218-2', 'pauldijou.fr');
-    ga('send', 'pageview');
+    ga('create', 'UA-51258218-2', 'auto');
+    ga('send', 'pageview', {'sessionControl': 'start'});
 
   </script>
 
@@ -71,6 +71,6 @@
     <ol class="indicator"></ol>
   </div>
 
-  <script src="resources/app.min-5c368ac8.js"></script>
+  <script src="resources/app.min-277c0e7b.js"></script>
 </body>
 </html>
