--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Farewell</title>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="kiwi.ico" />
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="format-detection" content="telephone=no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
