--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Farewell</title>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="kiwi.ico" />
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="format-detection" content="telephone=no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -12,7 +13,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="resources/app.min-a0b5bb73.css"/>
+  <link rel="stylesheet" href="resources/app.min-8c1f5a6b.css"/>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -71,6 +72,6 @@
     <ol class="indicator"></ol>
   </div>
 
-  <script src="resources/app.min-98fc1957.js"></script>
+  <script src="resources/app.min-120e7f77.js"></script>
 </body>
 </html>
