--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="resources/app.min-e77beb6b.css"/>
+  <link rel="stylesheet" href="resources/app.min-b0719106.css"/>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -62,16 +62,18 @@
     </div>
   </div>
 
-  <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="close">×</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-  </div>
+  <section data-swipe="disabled">
+    <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+      <div class="slides"></div>
+      <h3 class="title"></h3>
+      <a class="prev">‹</a>
+      <a class="next">›</a>
+      <a class="close">×</a>
+      <a class="play-pause"></a>
+      <ol class="indicator"></ol>
+    </div>
+  </section>
 
-  <script src="resources/app.min-120e7f77.js"></script>
+  <script src="resources/app.min-cd679bfd.js"></script>
 </body>
 </html>
